2023-07-26  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.7 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.7: Barbenheimer';git push
	git tag -a 5.1.7 -m 'all: Intel compiler fixes;ncclimo/ncremap implement cmp_sng; ncremap: CF lon_bnds';git push --tags

2023-07-25  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.7-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.7-beta01: Fan Dance';git push
	git tag -a 5.1.7-beta01 -m 'all: Intel compiler fixes;ncclimo/ncremap implement cmp_sng; ncremap: CF lon_bnds';git push --tags

	* ncks.c protect omp_set_num_threads() with ENABLE_OPENMP to fix #271

2023-07-23  Charlie Zender  <zender@uci.edu>

	* Implement nco_msh_lon_cf() in nco_rgr_wgt() to ensure	CF-compliant longitude bounds in regridded files

2023-07-16  Charlie Zender  <zender@uci.edu>

	* Tidy nco_map_mk(), nco_msh_lon_crr() to prepare to always output bounds on same branch cut

2023-06-23  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.7-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.7-alpha02: Prom';git push
	git tag -a 5.1.7-alpha02 -m 'all: fix Intel compiler issue with	OpenMP pragma; ncremap/ncclimo cmp_sng fix';git push --tags

	* ncremap/ncclimo: Insert backslashes into cmp_sng to protect pipe characters from shell

2023-05-25  Charlie Zender  <zender@uci.edu>

	* ncremap/ncclimo: Excise all Cori-specific script commands

2023-05-22  Charlie Zender  <zender@uci.edu>

	* Fix Intel compiler error by using grd_nbr instead of grd_sz_in in OpenMP block

2023-05-21  Charlie Zender  <zender@uci.edu>

	* Tidy header files

2023-05-16  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.7-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.7-alpha01: Promotion';git push
	git tag -a 5.1.7-alpha01 -m 'Functionally identical to 5.1.6';git push --tags

2023-05-12  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.6 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.6: Crossroads';git push